--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,24 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+argon2 = "0.5.3"
 axum = "0.8.4"
 axum-template = "3.0.0"
+chrono = "0.4.41"
+dotenv = "0.15.0"
+futures-util = "0.3.31"
 handlebars = "6.3.2"
+http = "1.3.1"
 serde = "1.0.219"
 serde_json = "1.0.142"
-sqlx = "0.8.6"
+sqlx = { version = "0.8", features = [ "runtime-tokio" , "postgres"] }
+axum-cookie = "0.2.3"
 tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.5", features = ["fs"] }
+axum-extra = "0.10.1"
+[dependencies.uuid]
+version = "1.17.0"
+# Lets you generate random UUIDs
+features = [
+    "v4",
+]
