--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ argon2 = "0.5.3"
 axum = "0.8.4"
 axum-template = "3.0.0"
 chrono = "0.4.41"
-dotenv = "0.15.0"
 futures-util = "0.3.31"
 handlebars = "6.3.2"
 http = "1.3.1"
@@ -19,6 +18,9 @@ axum-cookie = "0.2.3"
 tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.5", features = ["fs"] }
 axum-extra = "0.10.1"
+dotenvy = "0.15.7"
+regex = "1.11.1"
+lazy_static = "1.5.0"
 [dependencies.uuid]
 version = "1.17.0"
 # Lets you generate random UUIDs
