--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ axum-extra = "0.10.1"
 dotenvy = "0.15.7"
 regex = "1.11.1"
 lazy_static = "1.5.0"
+shuffle = "0.1.7"
+rand = "0.9.2"
 [dependencies.uuid]
 version = "1.17.0"
 # Lets you generate random UUIDs
