--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,4 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag fang:$(date +%s)
+        run: sudo docker build . --file Dockerfile --tag fang:$(date +%s)
+      - name: Save the Image
+        run: sudo docker save fang > builds/fang.tar
+      - name: Upload the Image
+        run: git add . && git commit -m "added build" && git push -u origin main
